fix crawler port env var

--- a/crawler-deployment.yaml
+++ b/crawler-deployment.yaml
@@ -26,7 +26,7 @@ spec:
       - name: synergychat-crawler-2
         image: bootdotdev/synergychat-crawler:latest
         env:
-          - name: CRAWLER_PORT_2
+          - name: CRAWLER_PORT
             valueFrom:
               configMapKeyRef:
                 name: synergychat-crawler-configmap
@@ -47,7 +47,7 @@ spec:
       - name: synergychat-crawler-3
         image: bootdotdev/synergychat-crawler:latest
         env:
-          - name: CRAWLER_PORT_3
+          - name: CRAWLER_PORT
             valueFrom:
               configMapKeyRef:
                 name: synergychat-crawler-configmap
