--- a/api-deployment.yaml
+++ b/api-deployment.yaml
@@ -28,3 +28,10 @@ spec:
             configMapKeyRef:
               name: synergychat-api-configmap
               key: API_DB_FILEPATH
+        volumeMounts:
+        - name: synergychat-api-volume
+          mountPath: /persist
+      volumes:
+      - name: synergychat-api-volume
+        persistentVolumeClaim:
+          claimName: synergychat-api-pvc
